--- a/css/pages.css
+++ b/css/pages.css
@@ -1,15 +1,115 @@
 .rt-body{
     background-image: url(img/veggies_flickr.jpg);
     background-size: cover;
+    height: auto;
+
 }
+
+.croll-body{
+    background-image: url(img/cinna_rolls.jpg);
+    background-size: cover;
+    height: auto;
+
+}
+
 
 .rev-body{
     background-image: url(img/sandwich_flickr.jpg);
     background-size: cover;
+    height: auto;
 }
 
 ul ul_nobullet{
     list-style: none;
     background-color: rgba(0,0,0,.75);
     color: rgb(255,153,0); 
+}
+
+
+.hotSpot-body{
+    background-image: url(img/kababs.jpg);
+    background-size: cover;
+    height: 40vh;
+    width: 100vw;
+}
+
+.h1-hotSpot{
+    color: white;
+    display:inline-block;
+    font-size: 750%;
+}
+.hotSpot-header{
+    align-content:center;
+    text-align: center;
+}
+
+.hotSpot-cards{
+    height: auto;
+    width:100vw;
+    background-color: lightgrey;
+    margin-top: 5vh;
+    content-align:center;
+}
+
+.mission{
+    text-align: center;
+    margin-top: 5vh;
+    border: 2px solid;
+    border-color: black;
+    background-color: rgba(0, 0, 0, .75);
+    color: white;
+    padding:5px;
+    border-radius: 5px;
+    font-size: 150%;
+    margin-left: 10vw;
+    margin-right: 10vw
+}
+
+.card1{
+    display: block;
+    
+    text-align: center;
+    align-content: center;
+    
+    
+}
+
+.cardcss{
+    width: 45vw;
+    height: auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 5vh;
+    border:2px solid;
+    border-color: black;
+    margin-bottom: 5vh;
+    
+}
+
+.bg-dark {
+    background-color: black !important;
+}
+
+footer {
+  bottom: 0px;
+  height: auto;
+  width: 100vw;
+  background-color: black !important;
+  color: lightgrey !important;
+  text-align: center;
+  
+}
+
+footer a {
+    color: lightgrey !important;
+}
+
+.new-white
+{
+    background-color: white;
+    height:auto;
+}
+
+.a_dark {
+    color:lightgrey;
 }
